feature: Remove API Key auth
